--- a/tests/index.html
+++ b/tests/index.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/living-animation.css">
     <link rel="stylesheet" href="{{rootURL}}assets/test-support.css">
+    <style type="text/css">
+      #ember-testing {
+        width: auto;
+        transform: none;
+      }
+    </style>
 
     {{content-for "head-footer"}}
     {{content-for "test-head-footer"}}
